# askgeo-mvp

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  render.yaml
.claude/: settings.local.json
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  deps.py  main.py  middleware.py  models.py  settings.py
backend/app/rag/: build_index.py  prompts.py  retriever.py  scrape_uwp.py
backend/app/routers/: ask.py  health.py  ingest.py
backend/tests/: __init__.py  test_ask.py  test_retriever.py
frontend/: Dockerfile  Dockerfile.render  index.html  nginx.conf  nginx.render.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  styles.css
frontend/src/components/: Chat.tsx  Footer.tsx  Header.tsx  Message.tsx  SourceList.tsx
frontend/src/lib/: api.ts
